--- a/templates/auths/login.html
+++ b/templates/auths/login.html
@@ -4,6 +4,8 @@
 {% block body %}
   <div class="d-flex justify-content-center align-items-center vh-100 bg-light">
     <div class="card shadow-lg p-4 rounded-4" style="min-width: 400px; max-width: 500px;">
+      <img src="{% static 'images/slogan.jpg' %}" alt="Logo" class="mx-auto d-block mb-3" style="width: 250px; height: auto; object-fit: contain;" />
+
       <h1 class="text-center mb-4">Login</h1>
 
       {% if messages %}
