--- a/templates/inventory/company_settings.html
+++ b/templates/inventory/company_settings.html
@@ -2,27 +2,48 @@
 {% load static %}
 
 {% block body %}
-  <h1>Add new engineer</h1>
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
-    {% endfor %}
-  {% endif %}
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">
-        <p>{{ message|safe }}</p> {% comment %}dded safe as django skip html{% endcomment %}
+  <div class="container mt-5" style="max-width: 600px;">
+    <h3 class="mb-4">Company Integration Settings</h3>
+
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
+      {% endfor %}
+    {% endif %}
+
+    <form method="POST" class="card p-4 shadow-sm border-0">
+      {% csrf_token %}
+
+      <!-- Switch -->
+      <div class="form-check form-switch mb-4">
+        {{ form.integrate_sf }}
+        <label class="form-check-label" for="{{ form.integrate_sf.id_for_label }}"><img src="{% static 'images/sf.png' %}" width="25px" height="25px" alt="Service Fusion" />{{ form.integrate_sf.label }}</label>
       </div>
-    {% endfor %}
-  {% endif %}
-  <form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Add engineer</button>
-  </form>
 
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+      <!-- Client ID -->
+      <div class="mb-3">
+        <label for="{{ form.sf_client_id.id_for_label }}" class="form-label">{{ form.sf_client_id.label }}</label>
+        {{ form.sf_client_id }}
+      </div>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <!-- Client Secret -->
+      <div class="mb-3">
+        <label for="{{ form.sf_client_secret.id_for_label }}" class="form-label">{{ form.sf_client_secret.label }}</label>
+        {{ form.sf_client_secret }}
+      </div>
+
+      <button type="submit" class="btn btn-success w-100">Save Settings</button>
+    </form>
+  </div>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <style>
+    .form-check-input {
+      width: 3em;
+      height: 1.5em;
+      cursor: pointer;
+    }
+  </style>
 {% endblock %}
