--- a/templates/auths/confirm.html
+++ b/templates/auths/confirm.html
@@ -105,7 +105,7 @@
         {% endfor %}
       </div>
     {% endif %}
-    <h1 class="mb-3">Welcome to <span class="text-primary">Stocky!</span></h1>
+    <h1 class="mb-3">Welcome to <span class="text-primary">goEng!</span></h1>
     <h4 class="mb-4 text-muted">We’re glad to have you here 🎉</h4>
     <p class="mb-4">
       Would you like to create a <strong>guest account</strong> that will be automatically deleted in
