--- a/templates/inventory/job_update.html
+++ b/templates/inventory/job_update.html
@@ -4,7 +4,7 @@
 {% block body %}
   {% if messages %}
     {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      <div class="alert alert-{{ message.tags }}" style="z-index: 999;">{{ message }}</div>
     {% endfor %}
   {% endif %}
   <h2 class="job-header">
@@ -16,6 +16,7 @@
 
     <!-- Parts count -->
     <span class="parts-count">Parts count: {{ items_count }}</span>
+
 
     <!-- Quotation -->
     {% if job.quoted %}
@@ -47,25 +48,29 @@
 
     {% endif %}
 
-     <form action="" method="post" >
+  <form action="" method="post">
+    {% csrf_token %}
+    
+    <!-- Always tell the view this toggle refers to on_hold -->
+    <input type="hidden" name="hold" value="1">
 
-        {% csrf_token %}
-        
-              <input type="hidden" name="on_hold" value="true">
-              <div class="form-check form-switch">
-                  <input 
-                    class="form-check-input" 
-                    type="checkbox" 
-                    id="on_hold" 
-                    name="on_hold" 
-                    value="1"
-                    
-                    {% if job.on_hold %}checked{% endif %}
-                    onchange="this.form.submit()">
-                  <label class="form-check-label" for="on_hold">✋Put on hold</label>
-                </div>
-      </form>
+    {% if job.on_hold %}
+        <!-- If currently ON, send a flag to tell the view to turn it off -->
+        <input type="hidden" name="on_hold" value="1">
+    {% endif %}
 
+    <div class="form-check form-switch">
+        <input 
+            class="form-check-input" 
+            type="checkbox" 
+            id="on_hold"
+            {% if job.on_hold %}checked{% endif %}
+            onchange="this.form.submit()">
+        <label class="form-check-label" for="on_hold">
+            ✋ Put on hold
+        </label>
+    </div>
+</form>
 
   </h2>
 
@@ -167,11 +172,38 @@
       color: #fff;
     }
   </style>
-  <h3>Unique items= {{ job.items.count }} Total required items={{ job|total_quantity }} Arrived={{ job|total_arrived_quantity }}</h3>
+  <h3>Unique items= {{ job.items.count }} Total required items={{ job|total_quantity }} Arrived={{ job|total_arrived_quantity }} 
+   <form action="" method="post">
+    {% csrf_token %}
+    
+    <!-- This always tells the view that this toggle is about parts attention -->
+    <input type="hidden" name="parts_attention" value="1">
 
+    {% if job.parts_need_attention %}
+        <!-- If already True, send a signal meaning 'turn it off' -->
+        <input type="hidden" name="parts_dont_need_attention" value="1">
+    {% endif %}
+
+    <div class="form-check form-switch">
+        <input 
+            class="form-check-input" 
+            type="checkbox" 
+            id="parts_need_attention"
+            {% if job.parts_need_attention %}checked{% endif %}
+            onchange="this.form.submit()">
+        <label class="form-check-label" style="color: #86372dff;" for="parts_need_attention">
+            Parts need attention
+        </label>
+    </div>
+</form>
+
+    
+    </h3>
+ 
   {% if job.status == 'paused' or job.status == 'ready' %}
     <h4><a href="{% url 'item_add' job.job_id %}">Add item</a></h4>
   {% endif %}
+  
   <section class="form-section">
     
     <form action="" method="POST" enctype="multipart/form-data" class="form-container">
@@ -183,6 +215,9 @@
       </div>
 
       <br />
+   
+      
+      
       <div class="form-group">{{ form.as_p }}</div>
 
       <div class="form-group">
